add: redis cache, queries
